# phi-lego

./: .gitignore  .gitmodules  ARCHITECTURE.md  CLAUDE.md  COVERAGE-FIXES.md  EXECUTABLE-STATUS.md  EXECUTABLE-TODO.md  HISTORY.md  LEGO.md  MATH.md  README.md  REBUILD-PROMPT.md  TEST-COVERAGE.md  TODO-CUBICAL.md  TODO.md  TOKENIZATION.md  TOKENIZATION_QUOTES.md  TOKENIZATION_TODO.md  dependencies.dot  lego.cabal  math-concepts.dot  structure.dot
.github/: copilot-instructions.md
examples/: COMPILATION.md  Cubical2INet.lego  INet.lego  INet2RewriteMachine.lego  Lambda2INet.lego  LegoSet.lego  RewriteMachine.lego  Xform.lego
examples/advanced/: Actors.lego  Async.lego  Concurrent.lego  IO.lego  STM.lego
examples/basics/: Arith.lego  Atoms.lego  Bool.lego  Church.lego  Either.lego  Lambda.lego  Lists.lego  Maybe.lego  Nat.lego  Pairs.lego  Pushout.lego  SKI.lego  StringOps.lego
examples/meta/: Auto.lego  Category.lego  Copattern.lego  Functor.lego  Lego.lego  Meta.lego  Optics.lego  Pattern.lego  Prelude.lego  Proof.lego  PushoutLaws.lego  Reflection.lego  Staging.lego  Tactics.lego  With.lego
examples/types/: Base.lego  CoC.lego  Cubical.lego  GADTs.lego  Graded.lego  HoTT.lego  Linear.lego  MLTT.lego  Observational.lego  QTT.lego  Quantitative.lego  Quotient.lego  Refinement.lego  Subtype.lego  Subtyping.lego  SystemF.lego  TypeFamilies.lego  TypeLevel.lego
interpreter/: GenGrammarDef.hs  Lego.hs  Main.hs  Repl.hs
interpreter/Lego/: Attr.hs  Builtins.hs  Composition.hs  Error.hs  Eval.hs  GrammarAnalysis.hs  GrammarDef.hs  GrammarInterp.hs  GrammarParser.hs  Internal.hs  Registry.hs  RewriteMachine.hs  SExpr.hs  Schema.hs  Token.hs  Validation.hs  Vocabulary.hs
phi/: Attr.lego  Cont.lego  Core.lego  Effect.lego  Grammar.lego  Graph.lego  Lego.lego  Mode.lego  Phi.lego  Prolog.lego  Reduce.lego  Sized.lego  Term.lego  Token.lego  TwoLevel.lego  Type.lego
prelude/lego/: Base.lego  Grammar.cooltt  Grammar.lean  Grammar.lego  Grammar.red  Grammar.sexpr
prelude/phi/: Grammar.lego
red/: CubicalIDE.lego  CubicalIDE.red  CubicalIDEExtended.red  CubicalIDERealizer.red  CubicalIDE_LegoIntegration.red  CubicalIDE_REPL.red  CubicalTypecheck.red  CubicalVM-HIT-Tests.red  CubicalVM-HIT.red  CubicalVM-Kan.red  CubicalVM.lego  CubicalVMHIT-Tests.red  CubicalVMHITDebugger.red  CubicalVMHITGraph.red  CubicalVMHITStep.red  CubicalVMHITViz.red  CubicalVM_1.red  CubicalVM_2.red  CubicalVM_3.red  CubicalVM_4.red  Example.red  Pipeline.red  RewriteCubical.red
red/Grammar/: Core.red  Parse.red  ParsePushout.red  Pushout.red
red/Rewrite/: Compose.red  Core.red
test/: BootstrapTest.hs  CommentTest.hs  MANUAL.md  Phi.hs  RedttTest.hs  RoundTripTest.hs  Toy.hs  lake-manifest.json  lakefile.lean
test/.lake/: lakefile.olean  lakefile.olean.trace
test/cursor/: CursorForLego.lego  GrammarExpr.sexp  grammar-core.sexp
test/examples/: context.sexp  identity.sexp  llm-context.sexp  path.sexp  symm.sexp
test/meta/: INet.lego  Lambda.lego  MetaGrammar.lego
test/pushout/: 01_BasicImport.lego  01_BasicPushout.lego  02_ParamGrammar.lego  02_ParamRef.lego  03_ConflictRule.lego  03_ConflictShadow.lego  03_ConflictVocab.lego  04_EOFIncremental.lego  04_EOFMarker.lego  05_EdgeDiamond.lego  05_EdgeEmpty.lego  05_EdgeSelfRef.lego  06_GrammarRef.lego  07_FullExample.lego  README.md  Simple.lego
toy/: ATTR-TODO.md  LegoGen.lean  Main.lean  README.md  RosettaMain.lean  TODO-COOLTT.md  TODO-LEXER.md  Test.lean  TestCool.lean  TestMinimalBootstrap.lean  TestRed.lean  TestRuntime.lean  lake-manifest.json  lakefile.lean  run-cooltt-tests.sh
toy/Cubical/: GeneratedPipeline.lean
toy/Rosetta/: Pipeline.lean  RosettaPipeline.lean
toy/doc/: redtt-ir.lego
toy/docs/: LEGO-ANALYSIS.md  REDTT.md
toy/examples/: Arith.lego  INet.lego  K.lego  Lambda.lego
toy/scripts/: bootstrap.sh
toy/src/: Lego.lean
toy/test/: Arith.lego  AttrTest.lego  Bootstrap.lego  Cooltt.lego  CubicalFeatures.lego  INet.lego  K.lego  Lambda.lego  LeanGrammarTest.lean  LeanParseAllTest.lean  LeanParseTest.lean  Meta.lego  MinimalBootstrap.lego  QuickLeanTest.lean  RED-TODO.md  Redtt.lego  RedttAST.lego  RedttElab.lego  (+5 more)
(+158 files in other folders)
